--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,6 @@ python:
 # command to install dependencies
 install:
   - "pip3 install -r requirements.txt"
+# command to run tests
+script:
+  - python manage.py test
