--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install:
   - "pip3 install -r requirements.txt"
 # command to run tests
 script:
-  - python manage.py test
+  - python -m tests.test_app
